# rubiks

./: .gitignore  Cargo.toml  README.md  cubelet_table.txt  pyproject.toml  rotation_table.txt
notebooks/: Untitled.ipynb  distribution_analysis.ipynb  ppo_example.ipynb  ppo_setup.ipynb
rubiks-lab-py/: Cargo.toml  pyproject.toml
rubiks-lab-py/src/: lib.rs
rubiks-lab-rs/: Cargo.toml
rubiks-lab-rs/src/: book.rs  cube.rs  cubelet.rs  lib.rs  main.rs  prelude.rs  word.rs
src/: action.rs  book.rs  cube.rs  cubelet.rs  graph.rs  lib.rs  main.rs  prelude.rs  rubiks.rs  store.rs  strategy.rs  view.rs  word.rs
src/strategy2/: mod.rs
