[package]
name = "rubiks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "cubix"
path = "src/bin/cubix.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
dashmap = "5.5.3"
num = "0.4.1"
rand = "0.8.5"
ratatui = "0.26.1"
