[package]
name = "rubiks_lab_rs"
version = "0.3.0-beta"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[[bin]]
name = "rubiks-lab"
path = "src/bin/rubiks_lab.rs"

[[bin]]
name = "rubooks"
path = "src/bin/rubooks.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.1"
sled = "0.34.7"

[dev-dependencies]
rand = "0.8.5"
